data/forge_javadoc/1.12.2/raw/net/minecraftforge/fml/common/network/ByteBufUtils.md
---
title: "ByteBufUtils"
description: "public class ByteBufUtils extends java.lang.Object"
package: "net/minecraftforge/fml/common/network"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraftforge/fml/common/network/ByteBufUtils.html"
sourceType: javadoc
---

# ByteBufUtils

**Inheritance:** java.lang.Object → net.minecraftforge.fml.common.network.ByteBufUtils

## Class signature

```java
public class ByteBufUtils extends java.lang.Object
```

## Constructors

- `ByteBufUtils()`

## Methods

- `static java.lang.String getContentDump(ByteBuf buffer)`
- `static ItemStack readItemStack(ByteBuf from)` — Read an ItemStack from the byte buffer provided.
- `static<T extends IForgeRegistryEntry<T>> java.util.List<T> readRegistryEntries(ByteBuf in, IForgeRegistry<T> registry)` — Read multiple registry entries from the same registries from the stream.
- `static<T extends IForgeRegistryEntry<T>> T readRegistryEntry(ByteBuf in, IForgeRegistry<T> registry)` — Read a registry entry from the stream.
- `static NBTTagCompound readTag(ByteBuf from)` — Read an NBTTagCompound from the byte buffer.
- `static java.lang.String readUTF8String(ByteBuf from)` — Read a UTF8 string from the byte buffer.
- `static int readVarInt(ByteBuf buf, int maxSize)` — Read a varint from the supplied buffer.
- `static int readVarShort(ByteBuf buf)` — An extended length short.
- `static int varIntByteCount(int toCount)` — The number of bytes to write the supplied int using the 7 bit varint encoding.
- `static void writeItemStack(ByteBuf to, ItemStack stack)` — Write an ItemStack using minecraft compatible encoding.
- `static<T extends IForgeRegistryEntry<T>> void writeRegistryEntries(ByteBuf out, java.util.Collection<T> entries)` — Write multiple registry entries from the same registry to the stream.
- `static<T extends IForgeRegistryEntry<T>> void writeRegistryEntry(ByteBuf out, T entry)` — Write a registry entry to the stream.
- `static void writeTag(ByteBuf to, NBTTagCompound tag)` — Write an NBTTagCompound to the byte buffer.
- `static void writeUTF8String(ByteBuf to, java.lang.String string)` — Write a String with UTF8 byte encoding to the buffer.
- `static void writeVarInt(ByteBuf to, int toWrite, int maxSize)` — Write an integer to the buffer using variable length encoding.
- `static void writeVarShort(ByteBuf buf, int toWrite)`
